--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@ionic-native/core": "^5.36.0",
+    "@ionic-native/file": "^5.36.0",
     "animejs": "^3.2.1",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
